[tool.poetry]
name = "coursework-4"
version = "0.1.0"
description = ""
authors = ["Victor <kolgatin@gmail.com>"]
readme = "README.md"
packages = [{include = "coursework_4"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
